--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.3.0
   path: ^1.8.3
+  image_picker: ^1.0.4
+  record: ^5.0.1
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
