--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.0.4
   record: ^5.0.1
   audioplayers: ^5.2.1
+  flutter_countdown_timer: ^4.1.0
 
 dev_dependencies:
   flutter_test:
