--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   record: ^5.0.1
   audioplayers: ^5.2.1
   flutter_countdown_timer: ^4.1.0
+  http: ^1.1.2
+  flutter_web_auth: ^0.5.0
 
 dev_dependencies:
   flutter_test:
