--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_web_auth: ^0.5.0
   shared_preferences: ^2.2.2
   outline_gradient_button: ^2.0.1+1
+  path_provider: ^2.1.1
+  dio: ^5.4.0
 
 dev_dependencies:
   flutter_test:
