--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,18 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  sqflite: ^2.3.0
   path: ^1.8.3
   image_picker: ^1.0.4
-  record: ^5.0.1
-  audioplayers: ^5.2.1
   flutter_countdown_timer: ^4.1.0
   http: ^1.1.2
-  flutter_web_auth: ^0.5.0
   shared_preferences: ^2.2.2
   outline_gradient_button: ^2.0.1+1
   path_provider: ^2.1.1
-  dio: ^5.4.0
+  flutter_sound: ^8.1.9
+  audioplayers: ^5.2.1
+
 
 dev_dependencies:
   flutter_test:
